renamed styles.css to .min.css, attempt to fix charts rendering on mobile by removing set width for box

--- a/styles.scss
+++ b/styles.scss
@@ -17,7 +17,3 @@ section.body{
         margin-right: 16px;
     }
 }
-
-.chart.box{
-    width: 100%;
-}
